--- a/Config/init.yaml
+++ b/Config/init.yaml
@@ -1,36 +1,43 @@
 ---
 apiVersion: v1
+kind: Namespace
+metadata:
+  name: bunker
+---
+apiVersion: v1
 kind: Service
 metadata:
-  name: yorha
+  name: nier
+  namespace: bunker
   labels:
-    app.kubernetes.io/name: yorha
+    app.kubernetes.io/name: nier
 spec:
   type: ClusterIP
   ports:
   - port: 80
   selector:
-    org: nier
-    class: yorha
+    org: yorha
+    class: nier
 ---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: yorha
+  name: nier
+  namespace: bunker
   labels:
-    app.kubernetes.io/name: yorha
+    app.kubernetes.io/name: nier
 spec:
   replicas: 2
   selector:
     matchLabels:
-      org: nier
-      class: yorha
+      org: yorha
+      class: nier
   template:
     metadata:
       labels:
-        org: nier
-        class: yorha
-        app.kubernetes.io/name: yorha
+        org: yorha
+        class: nier
+        app.kubernetes.io/name: nier
     spec:
       containers:
       - name: nginx
@@ -40,8 +47,9 @@ apiVersion: v1
 kind: Pod
 metadata:
   name: 2b
+  namespace: bunker
   labels:
-    org: nier
+    org: yorha
     class: battle
     app.kubernetes.io/name: 2b
 spec:
@@ -53,6 +61,7 @@ apiVersion: v1
 kind: Pod
 metadata:
   name: a2
+  namespace: bunker
   labels:
     org: resistance
     class: attack
