--- a/Init.yaml
+++ b/Init.yaml
@@ -1,9 +1,11 @@
----
 apiVersion: v1
 kind: Namespace
 metadata:
   name: kube-security
 ---
+
+
+
 apiVersion: v1
 kind: Service
 metadata:
@@ -12,10 +14,17 @@ metadata:
   labels:
     app.kubernetes.io/name: kube-sec
 spec:
+  selector:
+      app.kubernetes.io/name: kube-sec
   type: ClusterIP
   ports:
-  - port: 80
+  - name: http
+    port: 50000
+    targetPort: 50000
 ---
+
+
+
 apiVersion: v1
 kind: Pod
 metadata:
@@ -27,7 +36,15 @@ spec:
   containers:
   - name: kubernetes-security
     image: snowline2015/kubernetes-security:latest
+    ports:
+    - containerPort: 50000
+  nodeSelector:
+    kubernetes.io/hostname: kind-control-plane
+  nodeName: kind-control-plane
 ---
+
+
+
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
@@ -37,6 +54,9 @@ rules:
   resources: ["*"]
   verbs: ["*"]
 ---
+
+
+
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
