--- a/Init.yaml
+++ b/Init.yaml
@@ -18,7 +18,9 @@ spec:
       app.kubernetes.io/name: kube-sec
   type: ClusterIP
   ports:
-    port: 50000
+  - port: 50000
+    targetPort: 50000
+    protocol: TCP
 ---
 
 
