--- a/Init.yaml
+++ b/Init.yaml
@@ -60,8 +60,7 @@ spec:
   - port: 50000
     targetPort: 50000
   selector:
-    app.kubernetes.io/component: backend
-    app.kubernetes.io/part-of: kube-security-app
+    app.kubernetes.io/name: kube-sec
 ---
 
 
@@ -77,14 +76,11 @@ spec:
   replicas: 1
   selector:
     matchLabels:
-      app.kubernetes.io/component: backend
-      app.kubernetes.io/part-of: kube-security-app
+      app.kubernetes.io/name: kube-sec
   template:
     metadata:
       labels:
         app.kubernetes.io/name: kube-sec
-        app.kubernetes.io/component: backend
-        app.kubernetes.io/part-of: kube-security-app
     spec:
       serviceAccountName: kube-sec
       containers:
@@ -92,3 +88,4 @@ spec:
         image: snowline2015/kubernetes-security:latest
         ports:
         - containerPort: 50000
+---
