--- a/Init.yaml
+++ b/Init.yaml
@@ -86,6 +86,7 @@ spec:
       containers:
       - name: kubernetes-security
         image: snowline2015/kubernetes-security:latest
+        imagePullPolicy: Always
         ports:
         - containerPort: 50000
 ---
