--- a/helm-chart/kubernetes-security/templates/serviceaccount.yaml
+++ b/helm-chart/kubernetes-security/templates/serviceaccount.yaml
@@ -1,12 +1,7 @@
-{{- if .Values.serviceAccount.create -}}
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: {{ include "kubernetes-security.serviceAccountName" . }}
-  labels:
-    {{- include "kubernetes-security.labels" . | nindent 4 }}
-  {{- with .Values.serviceAccount.annotations }}
-  annotations:
-    {{- toYaml . | nindent 4 }}
-  {{- end }}
-{{- end }}
+  name: kube-sec
+  namespace: kube-security
+  labels: 
+    app.kubernetes.io/name: kube-sec
