--- a/helm-chart/kubernetes-security/Chart.yaml
+++ b/helm-chart/kubernetes-security/Chart.yaml
@@ -1,7 +1,13 @@
 apiVersion: v2
 name: kubernetes-security
 description: Security for Kubernetes
-
 type: application
-
 version: 0.1.0
+
+dependencies:
+  - name: elasticsearch
+    version: 8.7.0
+    repository: https://helm.elastic.co
+  - name: kibana
+    version: 8.7.0
+    repository: https://helm.elastic.co
